--- a/comic.html
+++ b/comic.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Yatra+One&display=swap" rel="stylesheet">
     <title>Stories</title>
     <style>
         body {
             background-color: black;
             color: aqua;
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: "Anton", sans-serif;
+            font-weight: 400;
+            font-style: normal;
         }
 
         /* Navbar styles */
@@ -118,7 +123,7 @@
 
     <!-- Story section -->
     <div class="stories-section" id="categories">
-        <h2>comics</h2>
+        <h2>COMICS</h2>
         <div class="stories-container"></div>
         
         <a href="https://www.erofus.com/comics/quoom_com-comics/stories/conquered">
