--- a/stories2.html
+++ b/stories2.html
@@ -142,10 +142,10 @@
             </div>
         </a>
 
-        <a href="story/collection2/">
+        <a href="story/collection2/punisher.html">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://i.pinimg.com/736x/aa/bd/2f/aabd2f4ab2a1119fb1207b7dfe358111.jpg" alt="Adventure Stories">
+                <div class="stories-title">Punisher</div>
             </div>
         </a>
 
