--- a/videos.html
+++ b/videos.html
@@ -152,9 +152,7 @@
 
             <div class="video-item">
                 <div class="video-title">Video Title</div> <!-- Title for Video 2 -->
-                <video controls class="video-player">
-                    <source src="videos/collection/6.mp4" type="video/mp4">
-                </video>
+                <video class="gif-video" src="https://xgroovy.com/get_file/1/5d67168564e8a5f3860b032970b5a1384f9b3e8560/171000/171439/171439_mobile_gif.mp4/" loop="" playsinline="true" webkit-playsinline="true" autoplay="" muted="" poster="https://i.xgroovy.com/contents/videos_screenshots/171000/171439/preview_gif.mp4.jpg"></video>
             </div>
 
             <div class="video-item">
