--- a/photo/categories.html
+++ b/photo/categories.html
@@ -117,7 +117,7 @@
             </a>
 
             <!-- Category 2 -->
-            <a href="">
+            <a href="collection/south.html">
                 <div class="category-item">
                     <img src="https://i.pinimg.com/564x/67/00/d5/6700d5bf4331fdfec0c16dca653247e6.jpg" alt="Animals">
                     <div class="category-title">south indian</div>
